--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="prompt_AccLabel">Account Label</string>
      <string name="signup">SignUp</string>
     <string name="loader">loader</string>
+    <string name="go_to_current_location">Go to current location</string>
+    <string name="fragment_maps">Set Location</string>
 </resources>
