--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="prompt_AccLabel">Account Label</string>
-     <string name="signup">SignUp</string>
+    <string name="signup">SignUp</string>
     <string name="loader">loader</string>
     <string name="go_to_current_location">Go to current location</string>
     <string name="fragment_maps">Set Location</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
